# itheima-c-

./: .gitignore  CMakeLists.txt  README.md
chapter1/: CMakeLists.txt  calculationOperator.cpp  helloworld.cpp
chapter1/02_dataType/: datatype.cpp
chapter1/03_calculationOperator/: calculationOperator.cpp
chapter1/04_programFlowStructure/: 02_switch.cpp  03_while.cpp  04_dowhile.cpp  05_for.cpp  06_nestedloop.cpp  08_jump.cpp
chapter1/05_array/: 01_1darray.cpp  02_1darrayexecise.cpp  03_bubblesort.cpp  04_2darray.cpp  05_score.cpp
chapter1/06_function/: 02_valuepass.cpp  04_funcdeclaration.cpp  05_funcfile.cpp  CMakeLists.txt  swap.cpp
chapter1/06_function/include/: 05_utils.h
chapter1/06_function/src/: 01_funcdef.cpp  03_functype.cpp  05_funcfile.cpp  swap.cpp
chapter1/07_pointer/: CMakeLists.txt  main.cpp
chapter1/07_pointer/include/: head.h
chapter1/07_pointer/src/: 01_pointerspace.cpp  02_nullptr.cpp  03_wildpointer.cpp  04_constpointer.cpp  05_arraypointer.cpp  06_funcpointer.cpp  07_pointercase.cpp  swap.cpp
chapter1/08_struct/: CMakeLists.txt  main.cpp
chapter1/08_struct/include/: head.h
chapter1/08_struct/src/: 01_definestruct.cpp  02_structarray.cpp  03_structpointer.cpp  04_structinstruct.cpp  05_structinfunc.cpp  06_conststruct.cpp
chapter1/programFlowStructure/: for.cpp  nestedloop.cpp  programFlowStructure.cpp
